--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
       <title>ajax課題</title>
-  <script src="/Users/mugi/environment/weather/app.js"></script>
+      <meta http-equiv="content-type" charset="utf-8">
+  <script src="app.js"></script>
   </head>
   <body>
       <h1>ロンドンのお天気情報を取得！</h1>
